Fix:margin-top casuing overflow of logo banner

--- a/signUP/style.css
+++ b/signUP/style.css
@@ -57,7 +57,8 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: end;
+  gap: 100px;
   align-items: center;
   background-image: url(assets/final.webp);
   background-repeat: no-repeat;
@@ -70,7 +71,6 @@ body {
 
 .logo {
   background: linear-gradient(to right, rgba(111, 64, 68, 0.4), rgba(151, 115, 129, 1), rgba(111, 64, 68, 0.4));
-  margin-top: 650px;
   height: 80px;
   width: 100%;
   transform: rotate(-8deg) skew(-8deg);
